--- a/07.Model2MVCShop(URI,pattern)/src/main/resources/config/common.properties
+++ b/07.Model2MVCShop(URI,pattern)/src/main/resources/config/common.properties
@@ -2,3 +2,5 @@
 
 pageSize=3
 pageUnit=5
+
+uploadPath=C:\\Users\\USER\\git\\07Model2MVCShop\\07.Model2MVCShop(URI,pattern)\\WebContent\\images\\uploadFiles
